add conn context and change registry methods

--- a/configs/options.yaml
+++ b/configs/options.yaml
@@ -47,7 +47,7 @@ Etcd:
   EtcdEndPoints:
     - "127.0.0.1:2379"
   Registry:
-    Key: "proxyserver:"
+    Key: "proxyserver"
     Password: ""
     KeyExpireTime: 100
     UpdateDuration: 10
@@ -58,7 +58,7 @@ Etcd:
 Redis:
   Addr: "127.0.0.1:6379"
   Registry:
-    Key: "proxyserver:"
+    Key: "proxyserver"
     Password: ""
     KeyExpireTime: 200
     UpdateDuration: 5
